changing the directory of DB

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 DATABASE = 'mongodb://127.0.0.1:27017'
-DATABASED = 'mongodb://127.0.0.1:27017/myDB'
+DATABASED = 'mongodb://127.0.0.1:27017/UsersDB'
